[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.black]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.egg-info
    | \.git
    | \.vscode
    | \.tox
    | \.mypy_cache
    | \.venv
    | __pycache__
    | venv
    | build
    | dist
    | \.history
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 4
length_sort = true
order_by_type = true
force_alphabetical_sort_within_sections = true